--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="search">
     	<input class="search_form" type="text" placeholder="Поиск по сайту" />
-        <input class="search_button" type="button" value="" />
+        <input class="search_button" type="button" value=" " />
 	</div>
 </nav>
 <div class="head">
@@ -31,6 +31,12 @@
 </header>
 <div class="middle">
 	<aside>
+    	<div class="new_number_magazine">
+        	<div class="magazine_cover">
+            	<img src="images/magazine_cover.png" width="151" height="219" alt="Номер 6" />
+            </div>
+            <div class="magazine_number_title"><a href="#">Новый номер</a><br /><br />№ 6</div>
+        </div>
     </aside>
     <section class="content">
     <h1>От главного редактора.</h1>
