--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@
 
 	</div><!-- .middle-->
 	<div class="footer_banner">
-    	<div class="banner"><img src="images/banner-1.png" width="304" height="131" /></div>
-        <div class="banner"><img src="images/banner-2.png" width="304" height="131" /></div>
-        <div class="banner"><img src="images/banner-3.png" width="304" height="131" /></div>
+    	<div class="banner"><img src="images/banner-1.png" width="304" height="131" alt=" " /></div>
+        <div class="banner"><img src="images/banner-2.png" width="304" height="131" alt=" " /></div>
+        <div class="banner"><img src="images/banner-3.png" width="304" height="131" alt=" " /></div>
     </div>
 	<footer class="footer">
 		<div class="footer_logo">
-        	<img src="images/footer_logo.png" width="208" height="57" /><br /><br /><br />
+        	<img src="images/footer_logo.png" width="208" height="57" alt=" " /><br /><br /><br />
             <span>© 2014 — «Медицинская техника»</span>
      	</div>
         <div class="footer_contacts">
@@ -140,7 +140,7 @@
 Телефон: (495) 695-10-70, (495) 695-10-71<br />
 E-mail: info@mtjournal.ru или galina@mtjournal.ru (для авторов)<br />
 kavalerov@mail.ru (для подписки и рекламы)<br /><br />
-<img src="images/skillpoint.png" width="92" height="28" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Создание сайте — «Skillpoint»
+<img src="images/skillpoint.png" width="92" height="28" alt=" " />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Создание сайте — «Skillpoint»
         </div>
         <div class="footer_menu">
         	<ul>
