--- a/404.html
+++ b/404.html
@@ -94,9 +94,15 @@
 
 	</div><!-- .middle-->
 	<div class="footer_banner">
-    	<div class="banner"><img src="images/banner-1.png" width="304" height="131" alt=" " /></div>
-        <div class="banner"><img src="images/banner-2.png" width="304" height="131" alt=" " /></div>
-        <div class="banner"><img src="images/banner-3.png" width="304" height="131" alt=" " /></div>
+    	<div class="footer_banner_container">
+            <div class="banner"><img src="images/banner-1.png" width="304" height="131" alt=" " /></div>
+            <div class="banner"><img src="images/banner-2.png" width="304" height="131" alt=" " /></div>
+            <div class="banner"><img src="images/banner-3.png" width="304" height="131" alt=" " /></div>
+            
+            <div class="banner"><img src="images/banner-1.png" width="304" height="131" alt=" " /></div>
+            <div class="banner"><img src="images/banner-2.png" width="304" height="131" alt=" " /></div>
+            <div class="banner"><img src="images/banner-3.png" width="304" height="131" alt=" " /></div>
+    	</div>
     </div>
 	<footer class="footer">
 		<div class="footer_logo">
