Сверстал, можно проверять

--- a/podpiska.html
+++ b/podpiska.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-	<title>МедТех - Архив</title>
+	<title>МедТех - Подписка на журнал</title>
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 	<link href="css/style.css" rel="stylesheet">
@@ -40,18 +40,22 @@
 	<div class="middle">
 
 		<div class="container">
-        <div class="breadcrumbs"><span><a href="#">Архив</a></span> / <span><a href="#">Номера за 2014 год</a></span></div>
 			<main class="content">
-				<h1>Диагностика внутриутробной гипоксии головного мозга новорожденного с помощью тепловизорной видеозаписи.</h1>
-                <h2 class="authors">Уракова Н.А., Ураков А.Л.</h2>
-                <p><br />Аннотация — это не зависимый от статьи источник информации. Ее пишут после завершения работы над основным тек­стом статьи. Она включает характеристику основной темы, проблемы, объекта, цели работы и ее результаты. В ней указывают, что нового несет в себе данный документ в сравнении с другими, родст­венными по тематике и целевому назначению. Рекомендуемый объ­ем — 100 – 250 слов на русском и английском языках.</p><br />
-                <a href="pdf/0.pdf"><img src="images/text_pdf.png" width="268" height="49" alt=" " /></a>
-                <div class="arhiv_back"><a href="#">Вернуться к содержанию</a></div>
-                
-                <div class="about_authors">
-                	<h2>Сведения об авторах</h2>
-                	<span>Сведения об авторах.</span>
-                </div>
+				<h1>Подписка на журнал</h1>
+                <br /><br />
+                <p><span class="subscr_index">Индекс по каталогу «Роспечать» – 72 940</span><br /><br />
+
+В редакции можно оформить и оплатить льготную подписку с любого месяца<br /><br />
+
+Стоимость подписки (включая НДС 10 %):<br />
+<span class="subscr_price">950 руб.</span> – за один номер 2015 года<br />
+<span class="subscr_price">5 700 руб.</span> – на 2015 год (6 номеров)<br /><br />
+
+Для оплаты подписки за безналичный расчет (выставление счета) отправьте заполненный счет по электронной почте <a href="#">kavalerov@mail.ru</a></p>
+
+<div class="subscr_button_box"><a href="#"><img src="images/button_subscr.png" width="502" height="49" /></a></div>
+
+<p>Не забудьте указать в платежном поручении Ваш полный почтовый адрес и номер контактного телефона.</p>
 			</main><!-- .content -->
 		</div><!-- .container-->
 
