--- a/redakciya1.html
+++ b/redakciya1.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-	<title>МедТех - Архив</title>
+	<title>МедТех - Редакционная коллегия</title>
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 	<link href="css/style.css" rel="stylesheet">
@@ -40,18 +40,37 @@
 	<div class="middle">
 
 		<div class="container">
-        <div class="breadcrumbs"><span><a href="#">Архив</a></span> / <span><a href="#">Номера за 2014 год</a></span></div>
 			<main class="content">
-				<h1>Диагностика внутриутробной гипоксии головного мозга новорожденного с помощью тепловизорной видеозаписи.</h1>
-                <h2 class="authors">Уракова Н.А., Ураков А.Л.</h2>
-                <p><br />Аннотация — это не зависимый от статьи источник информации. Ее пишут после завершения работы над основным тек­стом статьи. Она включает характеристику основной темы, проблемы, объекта, цели работы и ее результаты. В ней указывают, что нового несет в себе данный документ в сравнении с другими, родст­венными по тематике и целевому назначению. Рекомендуемый объ­ем — 100 – 250 слов на русском и английском языках.</p><br />
-                <a href="pdf/0.pdf"><img src="images/text_pdf.png" width="268" height="49" alt=" " /></a>
-                <div class="arhiv_back"><a href="#">Вернуться к содержанию</a></div>
-                
-                <div class="about_authors">
-                	<h2>Сведения об авторах</h2>
-                	<span>Сведения об авторах.</span>
-                </div>
+				<h1>Редакционная коллегия</h1>
+                <ul class="redakcia">
+<li><a href="redakciya2.html#1"><strong>Белов С. В.</strong>, доктор технических наук;</a></li>
+<li><a href="redakciya2.html#2"><strong>Блинов Н. Н.</strong>, доктор технических наук, профессор (заместитель главного редактора);</a></li>
+<li><a href="redakciya2.html#3"><strong>Бурлаков Р. И.</strong>, доктор технических наук;</a></li>
+<li><a href="redakciya2.html#4"><strong>Викторов В. А.</strong>, доктор технических наук, профессор;</a></li>
+<li><a href="redakciya2.html#5"><strong>Владимиров Л. В.</strong>, доктор технических наук;</a></li>
+<li><a href="redakciya2.html#6"><strong>Гринвальд В. М.</strong>, доктор технических наук;</a></li>
+<li><a href="redakciya2.html#7"><strong>Данилейко Ю. К.</strong>, доктор физико-математических наук, профессор;</a></li>
+<li><a href="redakciya2.html#8"><strong>Данилов А. А.</strong>, кандидат физико-математических наук (заместитель главного редактора);</a></li>
+<li><a href="redakciya2.html#9"><strong>Евтушенко Г. С.</strong>, доктор технических наук, профессор;</a></li>
+<li><a href="redakciya2.html#10"><strong>Зайченко К. В.</strong>, доктор технических наук, профессор;</a></li>
+<li><a href="redakciya2.html#11"><strong>Зеликман М. И.</strong>, доктор технических наук, профессор;</a></li>
+<li><a href="redakciya2.html#12"><strong>Истомина Т. В.</strong>, доктор технических наук, профессор;</a></li>
+<li><a href="redakciya2.html#13"><strong>Кавалеров Г. И.</strong>, доктор технических наук, профессор;</a></li>
+<li><a href="redakciya2.html#14"><strong>Кореневский Н. А.</strong>, доктор технических наук, профессор;</a></li>
+<li><a href="redakciya2.html#15"><strong>Костылев В. А.</strong>, доктор физико-математических наук, профессор;</a></li>
+<li><a href="redakciya2.html#16"><strong>Леонов Б. И.</strong>, доктор технических наук;</a></li>
+<li><a href="redakciya2.html#17"><strong>Лютов Г. П.</strong>, кандидат технических наук;</a></li>
+<li><a href="redakciya2.html#18"><strong>Мазуров А. И.</strong>, кандидат технических наук, старший научный сотрудник;</a></li>
+<li><a href="redakciya2.html#19"><strong>Орлов Ю. Н.</strong>, кандидат технических наук, доцент;</a></li>
+<li><a href="redakciya2.html#20"><strong>Пеккер Я. С.</strong>, кандидат технических наук, профессор;</a></li>
+<li><a href="redakciya2.html#21"><strong>Потрахов Н.Н.</strong>, доктор технических наук, профессор;</a></li>
+<li><a href="redakciya2.html#22"><strong>Саврасов Г.В.</strong>, доктор технических наук, профессор;</a></li>
+<li><a href="redakciya2.html#23"><strong>Спиридонов И. Н.</strong>, доктор технических наук, профессор;</a></li>
+<li><a href="redakciya2.html#24"><strong>Сушкова Л. Т.</strong>, доктор технических наук, профессор;</a></li>
+<li><a href="redakciya2.html#25"><strong>Шпикалов А. М.</strong>, старший научный сотрудник;</a></li>
+<li><a href="redakciya2.html#26"><strong>Щукин С. И.</strong>, доктор технических наук, профессор.</a></li>
+<li><a href="redakciya2.html#27"><strong>Юлдашев З.М.</strong>, доктор технических наук, профессор.</a></li>
+</ul>                                
 			</main><!-- .content -->
 		</div><!-- .container-->
 
