--- a/redakciya2.html
+++ b/redakciya2.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-	<title>МедТех - Архив</title>
+	<title>МедТех - Редакционная коллегия</title>
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 	<link href="css/style.css" rel="stylesheet">
@@ -40,17 +40,20 @@
 	<div class="middle">
 
 		<div class="container">
-        <div class="breadcrumbs"><span><a href="#">Архив</a></span> / <span><a href="#">Номера за 2014 год</a></span></div>
 			<main class="content">
-				<h1>Диагностика внутриутробной гипоксии головного мозга новорожденного с помощью тепловизорной видеозаписи.</h1>
-                <h2 class="authors">Уракова Н.А., Ураков А.Л.</h2>
-                <p><br />Аннотация — это не зависимый от статьи источник информации. Ее пишут после завершения работы над основным тек­стом статьи. Она включает характеристику основной темы, проблемы, объекта, цели работы и ее результаты. В ней указывают, что нового несет в себе данный документ в сравнении с другими, родст­венными по тематике и целевому назначению. Рекомендуемый объ­ем — 100 – 250 слов на русском и английском языках.</p><br />
-                <a href="pdf/0.pdf"><img src="images/text_pdf.png" width="268" height="49" alt=" " /></a>
-                <div class="arhiv_back"><a href="#">Вернуться к содержанию</a></div>
-                
-                <div class="about_authors">
-                	<h2>Сведения об авторах</h2>
-                	<span>Сведения об авторах.</span>
+				<h1>Редакционная коллегия</h1>
+				<div class="redakc_item" id="1">
+                	<div class="redakc_photo_box"><img class="redakc_photo" src="images/r1.png" width="168" height="240" alt="1" /></div>
+                    <div class="redakc_title">Белов С.В.<br /><span class="redakc_subtitle">доктор технических наук</span></div>
+                    <div class="redakc_info"><br />Родился 21 октября 1954 года в г. Харькове. В 1980 году окончил с отличием Харьковский институт радиоэлектроники по специальности «Автоматизированные системы управления».<br /><br />
+
+Кандидат технических наук с 1987 года. Диссертацию защитил 18 декабря 1987 г. в Харьковском институте радиоэлектроники.</div>
+                </div>
+                <br /><br />
+                <div class="redakc_item" id="2">
+                	<div class="redakc_photo_box"><img class="redakc_photo" src="images/r2.png" width="168" height="240" alt="1" /></div>
+                    <div class="redakc_title">Блинов Н.Н.<br /><span class="redakc_subtitle">доктор технических наук</span></div>
+                    <div class="redakc_info"><br />С 1998 г. - заведующий научно-исследовательской лабораторией системных технологий ХНУРЭ. За последние годы в рамках госбюджетных НИР был ответственным исполнителем научно-исследовательских работ, в том числе: «Информационно-аналитическая система «Выборы», «Разработка информационно-аналитической системы по чрезвычайным ситуациям Полтавской области», «Разработка информационно-аналитической системы с распределенным искусственным интеллектом «Университет».</div>
                 </div>
 			</main><!-- .content -->
 		</div><!-- .container-->
