--- a/reklamodatelyam.html
+++ b/reklamodatelyam.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-	<title>МедТех - Архив</title>
+	<title>МедТех - Рекламодателям</title>
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 	<link href="css/style.css" rel="stylesheet">
@@ -40,18 +40,24 @@
 	<div class="middle">
 
 		<div class="container">
-        <div class="breadcrumbs"><span><a href="#">Архив</a></span> / <span><a href="#">Номера за 2014 год</a></span></div>
 			<main class="content">
-				<h1>Диагностика внутриутробной гипоксии головного мозга новорожденного с помощью тепловизорной видеозаписи.</h1>
-                <h2 class="authors">Уракова Н.А., Ураков А.Л.</h2>
-                <p><br />Аннотация — это не зависимый от статьи источник информации. Ее пишут после завершения работы над основным тек­стом статьи. Она включает характеристику основной темы, проблемы, объекта, цели работы и ее результаты. В ней указывают, что нового несет в себе данный документ в сравнении с другими, родст­венными по тематике и целевому назначению. Рекомендуемый объ­ем — 100 – 250 слов на русском и английском языках.</p><br />
-                <a href="pdf/0.pdf"><img src="images/text_pdf.png" width="268" height="49" alt=" " /></a>
-                <div class="arhiv_back"><a href="#">Вернуться к содержанию</a></div>
-                
-                <div class="about_authors">
-                	<h2>Сведения об авторах</h2>
-                	<span>Сведения об авторах.</span>
-                </div>
+				<h1>Рекламодателям</h1>
+                <h2>Требования к рекламным материалам</h2>
+                <p>
+                Рекламные материалы следует предоставлять:<br />
+                <ul class="list_req">
+<li><span>в формате программ Corel Draw, Photoshop:</span></li>
+<ul class="list_req">
+<li><span>для полноцветной полосы рекламы формата А4 размер записанного изображения 215×300 мм c разрешением не менее 300 dpi;</span></li>
+<li><span>для первой полосы обложки журнала размер записанного изображения 215×180 мм c разрешением не менее 300 dpi;</span></li>
+</ul>
+<li><span>в виде отдельных фотографий размером не менее 9×12 см c разрешением не менее 300 dpi с рекламным текстом или в виде готовых модулей.</span></li>
+</ul>
+<br />
+Срок подачи рекламных материалов – <strong>за полтора месяца до опубликования</strong>.
+<br /><br />
+Отправить заявку на размещение рекламных материалов, обсудить конкретные технические вопросы можно по электронной почте <a href="#">kavalerov@mail.ru</a> и по телефонам (495)695-10-70, (495)695-10-71.
+                </p>
 			</main><!-- .content -->
 		</div><!-- .container-->
 
